# crysio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  crysio project structure.txt  pyproject.toml  requirements.txt  setup.py
crysio/: __init__.py
crysio/api/: __init__.py  materials_project.py
crysio/converters/: __init__.py  graph_builder.py
crysio/core/: __init__.py  crystal.py  parsers.py  validators.py
crysio/utils/: __init__.py  exceptions.py
crysio/visualizers/: __init__.py  analysis_plots.py  crystal_viz.py  graph_viz.py  materials_project_viewer.py
